--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:container": "name=bapturp/bloglist; docker build -t $name:$(git log --pretty=format:'%h' -n 1) -t $name:latest ."
   },
   "author": "",
   "license": "MIT",
